# Runtimes_Deployment-Agent

./: .gitignore  LICENSE  README.md  app.py  example.env.sh  example_usage.py  execute_agent.py  newyamlfile.yaml  pyproject.toml  requirements.txt
config-yaml/: modelcar_file.yaml  sample_modelcar_config.base.yaml  sample_modelcar_config.generated.yaml  sample_modelcar_config.yaml  simple_modelcar_config.yaml
gpu_info/: gpu_info.txt
info/: deployment_info.txt  deployment_matrix.json  gpu_info.txt  models_info.json  supervisor_summary.txt
src/: gpu_info.txt  utils.py
src/agent/: llm_agent.py
src/agent/specialists/: config_specialist.py  model_size_specialist.py
src/config/: model_config.py
src/runtimes_dep_agent/: execute_agent.py
src/runtimes_dep_agent/agent/: llm_agent.py
src/runtimes_dep_agent/agent/specialists/: __init__.py  accelerator_specialist.py  config_specialist.py  decision_specialist.py  qa_specialist.py  report_specialist.py
src/runtimes_dep_agent/config/: model_config.py
src/runtimes_dep_agent/reports/: validation_report.py
src/runtimes_dep_agent/validators/: __init__.py  accelerator_validator.py
src/utils/: util_functions.py
src/validators/: accelerator_validator.py
tests/: test_llm_agent.py  test_valreporting_agent.py
